[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/selection_boss.gd" type="Script" id=1]

[node name="selection" type="Node2D"]
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 312.0
margin_top = 60.0
margin_right = 712.0
margin_bottom = 160.0
text = "Amdre"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_left = 312.0
margin_top = 200.0
margin_right = 712.0
margin_bottom = 300.0
text = "Ludum Dario"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="."]
margin_left = 312.0
margin_top = 360.0
margin_right = 712.0
margin_bottom = 460.0
text = "GMTKactus"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
